src/objects/Conversion_Notes_Form__c.object
<CustomObject>
    <description>Holds a record for each clinical note instance tied to a conversion apt.</description>
    <fields>
        <fullName>AP_Spread__c</fullName>
        <label>AP Spread</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Conversion Notes Forms</relationshipLabel>
        <relationshipName>Conversion_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cantilever_Length__c</fullName>
        <label>Cantilever Length</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Conversion Notes Forms</relationshipLabel>
        <relationshipName>Conversion_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Conversion Notes Forms</relationshipLabel>
        <relationshipName>Conversion_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_Radiography__c</fullName>
        <label>Confirmation Radiography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pano</fullName>
                </value>
                <value>
                    <fullName>Periapical</fullName>
                </value>
                <value>
                    <fullName>iCat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implant_Tooth_Position__c</fullName>
        <label>Implant Tooth Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LL_Cantilever_Length__c</fullName>
        <label>LL Cantilever Length</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LR_Cantilever_Length__c</fullName>
        <label>LR Cantilever Length</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lower_AP_Spread__c</fullName>
        <label>Lower AP Spread</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_Cantilever_Length__c</fullName>
        <label>UL Cantilever Length</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UR_Cantilever_Length__c</fullName>
        <label>UR Cantilever Length</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upper_AP_Spread__c</fullName>
        <label>Upper AP Spread</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Conversion Notes Form</label>
    <nameField>
        <displayFormat>CNF-{0000}</displayFormat>
        <label>Conversion Notes Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversion Notes Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>